--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,16 @@
+2017-01-13  Jeff Law  <law@redhat.com>
+
+        PR tree-optimization/33562
+        PR tree-optimization/61912
+        PR tree-optimization/77485
+	* gcc.dg/tree-ssa/complex-4.c: Remove xfail.
+	* gcc.dg/tree-ssa/complex-5.c: Likewise.
+	* gcc.dg/tree-ssa/ssa-dse-9.c: Likewise.
+	* gcc.dg/tree-ssa/ssa-dse-18.c: New test.
+	* gcc.dg/tree-ssa/ssa-dse-19.c: Likewise.
+	* gcc.dg/tree-ssa/ssa-dse-20.c: Likewise.
+	* gcc.dg/tree-ssa/ssa-dse-21.c: Likewise.
+
 2017-01-13  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/79043
