PR tree-optimization/61912 	PR tree-optimization/77485 	* tree-ssa-dse.c: Include expr.h. 	(maybe_trim_constructor_store): New function. 	(maybe_trim_partially_dead_store): Call maybe_trim_constructor_store.
	PR tree-optimization/61912
	PR tree-optimization/77485
	* g++.dg/tree-ssa/ssa-dse-1.C: New test.
	* gcc.dg/tree-ssa/pr30375: Adjust expected output.
	* gcc.dg/tree-ssa/ssa-dse-24.c: New test.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244443 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,8 +1,14 @@
 2017-01-13  Jeff Law  <law@redhat.com>
 
-        PR tree-optimization/33562
-        PR tree-optimization/61912
-        PR tree-optimization/77485
+	PR tree-optimization/61912
+	PR tree-optimization/77485
+	* tree-ssa-dse.c: Include expr.h.
+	(maybe_trim_constructor_store): New function.
+	(maybe_trim_partially_dead_store): Call maybe_trim_constructor_store.
+
+	PR tree-optimization/33562
+	PR tree-optimization/61912
+	PR tree-optimization/77485
 	* doc/invoke.texi: Document new dse-max-object-size param.
 	* params.def (PARM_DSE_MAX_OBJECT_SIZE): New PARAM.
 	* tree-ssa-dse.c: Include params.h.
