Remove unused include from Profile Mode header
	* include/profile/base.h: Remove unused header that leads to header
	cycle in C++17 mode.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244449 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-13  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/profile/base.h: Remove unused header that leads to header
+	cycle in C++17 mode.
+
 	PR libstdc++/79075
 	* include/bits/basic_string.h [_GLIBCXX_USE_CXX11_ABI] (basic_string):
 	Make _If_sv private.
