PR65411 don't retry fclose on EINTR
	PR libstdc++/65411
	* config/io/basic_file_stdio.cc (__basic_file<char>::close()): Don't
	retry fclose on EINTR.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244451 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-13  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/65411
+	* config/io/basic_file_stdio.cc (__basic_file<char>::close()): Don't
+	retry fclose on EINTR.
+
 	* include/profile/base.h: Remove unused header that leads to header
 	cycle in C++17 mode.
 
