2017-01-13  Joe Seymour  <joe.s@somniumtech.com> * config/msp430/t-msp430 (libmul_none.a, libmul_16.a, libmul_32.a, libmul_f5.a): Filter archived prerequisites.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244455 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libgcc/ChangeLog
+++ b/libgcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-13  Joe Seymour  <joe.s@somniumtech.com>
+
+	* config/msp430/t-msp430 (libmul_none.a, libmul_16.a, libmul_32.a,
+	libmul_f5.a): Filter archived prerequisites.
+
 2017-01-10  Andrew Senkevich  <andrew.senkevich@intel.com>
 
 	* config/i386/cpuinfo.h (processor_features): Add
