* doc/frontends.texi (G++ and GCC): Remove references to Java.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244463 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-14  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/frontends.texi (G++ and GCC): Remove references to Java.
+	
 2017-01-13  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/33562
