--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-14  Alan Modra  <amodra@gmail.com>
+
+	* gcc.c-torture/compile/pr72749.c: New test.
+
 2017-01-13  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c/78304
