PR rtl-optimization/78626 	PR rtl-optimization/78727 	* cprop.c (one_cprop_pass): Collect unconditional traps in the middle 	of a block, and split such blocks after everything else is finished.
        PR rtl-optimization/78626
        PR rtl-optimization/78727
	* gcc.dg/torture/pr78626.c: New test.
	* gcc.dg/torture/pr78727.c: New test.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244467 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-14  Bernd Schmidt  <bschmidt@redhat.com>
+
+	PR rtl-optimization/78626
+	PR rtl-optimization/78727
+	* cprop.c (one_cprop_pass): Collect unconditional traps in the middle
+	of a block, and split such blocks after everything else is finished.
+
 2017-01-14  Alan Modra  <amodra@gmail.com>
 
 	PR target/72749
