ifcvt: Don't make invalid insns for a cond trap (PR78751)
As shown in the PR, ifcvt will happily make invalid insns when given the
chance.  This patch teaches it some manners.


	PR rtl-optimization/78751
	* ifcvt.c (find_cond_trap): If we generated a non-existing insn,
	give up.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244476 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-15  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR rtl-optimization/78751
+	* ifcvt.c (find_cond_trap): If we generated a non-existing insn,
+	give up.
+
 2017-01-14  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/79090
