Make rtl_split_edge work for jumps that fall through (PR72749)
If a jump always falls through but that cannot be optimised away, like
is the case with the PowerPC bdnz insn if its jump target is the same as
the fallthrough, sched gets confused if it schedules some instructions
from before that jump instruction to behind it: it splits the
fallthrough branch, but the jump target isn't updated, and things fall
apart as in the PR.  This patch fixes it.

The second patch fragment makes -fsched-verbose=N work for N>=4; the
currently scheduled fragment can now contain a label.  Everything else
seems to work fine with that.


	PR target/72749
	* cfgrtl.c (rtl_split_edge): Also patch jump insns that jump to the
	fallthrough.
	* haifa-sched.c (dump_insn_stream): Don't crash if there is a label
	in the currently scheduled RTL fragment.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244477 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2017-01-15  Segher Boessenkool  <segher@kernel.crashing.org>
 
+	PR target/72749
+	* cfgrtl.c (rtl_split_edge): Also patch jump insns that jump to the
+	fallthrough.
+	* haifa-sched.c (dump_insn_stream): Don't crash if there is a label
+	in the currently scheduled RTL fragment.
+
+2017-01-15  Segher Boessenkool  <segher@kernel.crashing.org>
+
 	PR rtl-optimization/78751
 	* ifcvt.c (find_cond_trap): If we generated a non-existing insn,
 	give up.
