--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/opt62.adb: New test.
+	* gnat.dg/opt62_pkg.ads: New helper.
+
 2017-01-14  Bernd Schmidt  <bschmidt@redhat.com>
 
         PR rtl-optimization/78626
