--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/71737
+	* c-common.c (set_underlying_type): Always set DECL_ORIGINAL_TYPE.
+
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
 	(-Wformat-overflow): ...to this.
