system.h: Poison strndup (PR bootstrap/78616)
gcc/ChangeLog:
	PR bootstrap/78616
	* system.h: Poison strndup.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244494 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  David Malcolm  <dmalcolm@redhat.com>
+
+	PR bootstrap/78616
+	* system.h: Poison strndup.
+
 2017-01-16  Alan Modra  <amodra@gmail.com>
 
 	PR target/79098
