PR testsuite/79051 - FAIL: gcc.dg/attr-alloc_size-4.c (test for warnings, line 140)
gcc/testsuite/ChangeLog:
	* gcc.dg/attr-alloc_size-4.c: Avoid exercising a test case except
	on x86.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244497 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-16  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/79051
+	* gcc.dg/attr-alloc_size-4.c: Avoid exercising a test case except
+	on x86.
+
 2017-01-16  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	Revert:
